crates/compiler/test_syntax/tests/snapshots/fail/if_outdented_else_branch.expr.roc
if thing then
    whatever
else
something better
